test/should_not_compile/signature1.sml
structure Foo = struct
type 'a t = 'a -> 'a
end : sig eqtype 'a t end;
